adding forms for register page

--- a/src/components/pole.astro
+++ b/src/components/pole.astro
@@ -2,7 +2,7 @@
 import { Image } from "astro:assets";
 
 interface Props {
-    img: ImageMetadata,
+    img: ImageMetadata | string,
     fullName: string
 }
 
