adding prose class here and there

--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -30,7 +30,7 @@ const features = [
 ];
 ---
 
-<div class="mt-16 md:mt-0">
+<div class="mt-16 md:mt-0 prose mx-auto lg:prose-xl">
   <h2 class="text-2xl lg:text-2xl font-bold lg:tracking-tight">
     Le bien-être et la protection des animaux constituent aujourd’hui une des préoccupations majeures de la société.
   </h2>
@@ -53,16 +53,16 @@ const features = [
 <div class="grid sm:grid-cols-2 md:grid-cols-4 mt-16 gap-16">
   {
     features.map((item) => (
-      <div class="relative flex gap-4 hover:cursor-pointer bg-gray-100  rounded-lg p-10 text-center items-start
+      <div class="relative text-center hover:cursor-pointer bg-gray-100  rounded-lg p-14
       transition ease-out delay-150 hover:-translate-y-1 hover:scale-110 hover:bg-green-600 duration-300 hover:text-white">
-        <div class="absolute rounded-bl-2xl top-0 right-0 bg-green-600">
+        <div class="absolute rounded-tr-lg rounded-bl-lg top-0 right-0 bg-green-600">
           <div class=" p-3 w-10 h-10 ">
-            <Icon class="text-white" name={item.icon} />
+            <Icon class="text-gray-200" name={item.icon} />
           </div>
       </div>
-        <div>
-          <h3 class="font-semibold  text-lg">{item.title}</h3>{" "}
-          <p class="mt-2 leading-relaxed">{item.description}</p>
+        <div class="flex flex-col items-center gap-4 justify-center">
+          <h3 class="font-semibold text-lg">{item.title}</h3>
+          <p class="">{item.description}</p>
         </div>
       </div>
     ))
