--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -27,7 +27,7 @@ const menuitems = [
     string: "nav.contribute",
     path: `contribute`,
     children: [
-      { title: "nav.contribute.adherer", path: "#" },
+      { title: "nav.contribute.adherer", path: "register" },
       { title: "Another action", path: "#" },
       { title: "Dropdown Submenu", path: "#" },
     ],
