--- a/src/pages/[lang]/expertise.astro
+++ b/src/pages/[lang]/expertise.astro
@@ -11,7 +11,7 @@ export function getStaticPaths () {
 ---
 
 <Layout title="Expertise">
-  <Container>
+  <Container class="prose lg:prose-xl">
     <Sectionhead>
       <Fragment slot="title">Expertise</Fragment>
       <Fragment slot="desc">Découvrez ci-dessous les domaines d'expertise de l'Association
