--- a/src/pages/[lang]/poles.astro
+++ b/src/pages/[lang]/poles.astro
@@ -17,7 +17,7 @@ export function getStaticPaths() {
 ---
 
 <Layout title="Contact">
-  <Container>
+  <Container class="prose lg:prose-xl">
     <Sectionhead>
       <Fragment slot="title">{t("page.poles.title")}</Fragment>
       <Fragment slot="desc">{t("page.poles.subtitle")}</Fragment>
