--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -62,7 +62,9 @@ import { ViewTransitions } from 'astro:transitions';
   </head>
   <body>
     <Navbar />
+    <div>
     <slot />
+  </div>
     <Footer />
     <style is:global>
       /* Improve Page speed */
